--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -6,3 +6,8 @@ sky:
     database: sky_take_out
     username: root
     password: 1234
+  alioss:
+    endpoint: oss-cn-beijing.aliyuncs.com
+    access-key-id: LTAI5tAYCsVLwS9rHA2dUQfP
+    access-key-secret: 3sh8Tye6ZD443QsfBSz46PCssrRiFI
+    bucket-name: web-zq-ski
