--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -11,3 +11,8 @@ sky:
     access-key-id: LTAI5tAYCsVLwS9rHA2dUQfP
     access-key-secret: 3sh8Tye6ZD443QsfBSz46PCssrRiFI
     bucket-name: web-zq-ski
+  redis:
+    host: localhost
+    port: 6379
+    password: 123456
+    database: 10
