支付订单功能代码开发

--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -19,3 +19,10 @@ sky:
   wechat:
     appid: wx9cd307d86784d0a3
     secret: cab33a6596934444052f1b40ed6b8825
+    mchid: 1561414331
+    mchSerialNo: 4B3B3DC35414AD50B1B755BAF8DE9CC7CF407606
+    privateKeyFilePath: C:\software\apiclient_key.pem
+    apiV3Key: CZBK51236435wxpay435434323FFDuv3
+    weChatPayCertFilePath: C:\software\wechatpay_166D96F876F45C7D07CE98952A96EC980368ACFC.pem
+    notifyUrl: https://9ea0754.r19.cpolar.top/notify/paySuccess
+    refundNotifyUrl: https://9ea0754.r19.cpolar.top/notify/refundSuccess
